--- a/package.json
+++ b/package.json
@@ -24,10 +24,20 @@
     "@babel/preset-env": "^7.8.7",
     "@vue/test-utils": "^1.0.0-beta.32",
     "babel-core": "^7.0.0-bridge.0",
+    "babel-eslint": "^10.1.0",
     "babel-jest": "^25.1.0",
     "babel-loader": "^8.0.6",
     "core-js": "^3.6.4",
     "css-loader": "^3.4.2",
+    "eslint": "^6.8.0",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-config-vue": "^2.0.2",
+    "eslint-loader": "^3.0.3",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "eslint-plugin-vue": "^6.2.2",
     "jest": "^25.1.0",
     "jest-serializer-vue": "^2.0.2",
     "node-sass": "^4.13.1",
