--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "webpack-cli": "^3.3.11"
   },
   "dependencies": {
+    "validate.js": "^0.13.1",
     "vue": "^2.6.11",
     "vuex": "^3.1.3"
   }
