--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "vuexを使用する際のディレクトリ構造やコンポーネント設計のベースを作成します。",
   "main": "index.js",
   "scripts": {
-    "watch": "webpack -d --watch",
+    "build:prod": "webpack --config webpack.prod.js",
+    "build:dev": "webpack --config webpack.dev.js",
+    "watch": "webpack --config webpack.dev.js --watch",
     "test": "jest"
   },
   "repository": {
@@ -47,7 +49,8 @@
     "vue-loader": "^15.9.0",
     "vue-template-compiler": "^2.6.11",
     "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "webpack-merge": "^4.2.2"
   },
   "dependencies": {
     "validate.js": "^0.13.1",
